# ego_ws

./: .gitignore  cleanup_nodes.sh  drift_diagnosis.py  frames_2025-09-14_16.58.25.gv  frames_2025-09-14_19.03.30.gv  frames_2025-09-14_19.19.41.gv  frames_2025-09-14_20.11.36.gv  frames_2025-09-14_21.21.31.gv  frames_2025-09-14_21.40.27.gv  frames_2025-09-14_22.39.16.gv  frames_2025-09-14_23.53.16.gv  frames_2025-09-15_07.38.20.gv  frames_2025-09-15_08.00.14.gv  frames_2025-09-15_20.32.36.gv  frames_2025-09-15_21.23.09.gv  frames_2025-09-15_21.30.35.gv  frames_2025-09-15_21.33.21.gv  frames_2025-09-15_21.49.35.gv  frames_2025-09-15_21.56.56.gv  frames_2025-09-15_22.09.04.gv  frames_2025-09-15_22.30.13.gv  frames_2025-09-15_22.49.07.gv  frames_2025-09-15_22.53.04.gv  frames_2025-09-15_23.08.01.gv  frames_2025-09-17_23.25.00.gv  frames_2025-09-23_00.24.02.gv  gravity_analysis.py  madgwick_behavior_analysis.md  test_imu_data.py  test_lidar_range.py
.github/: copilot-instructions.md
src/egocar_KCFTracker/: CMakeLists.txt  package.xml
src/egocar_KCFTracker/launch/: KCFTracker_X3.launch.py
src/egocar_astra/: package.xml  setup.cfg  setup.py
src/egocar_astra/egocar_astra/: colorHSV.py  colorHSV.text  colorTracker.py
src/egocar_astra/launch/: colorTracker.launch.py
src/egocar_base_node/: CMakeLists.txt  package.xml
src/egocar_base_node/src/: base_node.cpp
src/egocar_bringup/: package.xml  setup.cfg  setup.py
src/egocar_bringup/egocar_bringup/: Mcnamu_driver_X3.py  Mcnamu_driver_X3plus.py  calibrate_angular.py  calibrate_linear.py  forward_node.py
src/egocar_bringup/launch/: bringup_launch.py  yahboomcar_bringup_X3_launch.py
src/egocar_bringup/param/: imu_calib.yaml  robot_localization.yaml
src/egocar_ctrl/: package.xml  setup.cfg  setup.py
src/egocar_ctrl/egocar_ctrl/: ego_joy.py
src/egocar_ctrl/launch/: ego_joy_launch.py
src/egocar_description/: package.xml  setup.cfg  setup.py
src/egocar_description/launch/: display.launch.py
src/egocar_description/rviz/: egocar.rviz
src/egocar_description/urdf/: egocar_X3plus.gazebo.urdf.xacro  egocar_X3plus.gazebo.xacro  egocar_X3plus.urdf  egocar_X3plus.urdf.xacro
src/egocar_laser/: package.xml  setup.cfg  setup.py
src/egocar_msgs/: CMakeLists.txt  package.xml
src/egocar_nav/: package.xml  setup.cfg  setup.py
(+48 files in other folders)
