<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>egocar_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for EgoCar, handles drivers, odometry and sensor fusion.</description>
  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>Apache License 2.0</license>

  <!-- 建置工具依賴 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Python 依賴項 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>robot_localization</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>joy</depend>
  
  <!-- 自定義消息包 -->
  <depend>egocar_msgs</depend>
  
  <!-- 測試依賴 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- 修改：將建置類型改為 ament_python -->
    <build_type>ament_python</build_type>
  </export>
</package>
